// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackgroundControl Check Background Color layer 1`] = `
Array [
  Object {
    "background-color-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-general": "",
    "background-color-m": "",
    "background-palette-color-general": 5,
    "background-palette-color-m": 5,
    "background-palette-color-status-general": true,
    "background-palette-color-status-m": true,
    "background-palette-opacity-general": 45,
    "background-palette-opacity-m": 45,
    "display-general": "block",
    "id": 1,
    "type": "color",
  },
]
`;

exports[`BackgroundControl Check Background Color layer hover 1`] = `
Array [
  Object {
    "background-color-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-general-hover": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
    "background-color-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-m-hover": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
    "background-color-general": "",
    "background-color-general-hover": "",
    "background-color-m": "",
    "background-color-m-hover": "",
    "background-palette-color-general": 5,
    "background-palette-color-general-hover": 5,
    "background-palette-color-m": 5,
    "background-palette-color-m-hover": 5,
    "background-palette-color-status-general": true,
    "background-palette-color-status-general-hover": true,
    "background-palette-color-status-m": true,
    "background-palette-color-status-m-hover": true,
    "background-palette-opacity-general": 45,
    "background-palette-opacity-general-hover": 0,
    "background-palette-opacity-m": 45,
    "background-palette-opacity-m-hover": 0,
    "display-general": "block",
    "id": 1,
    "type": "color",
  },
]
`;

exports[`BackgroundControl Check Background image layer 1`] = `
Array [
  Object {
    "background-image-attachment-general": "fixed",
    "background-image-attachment-m": "fixed",
    "background-image-clip-general": "border-box",
    "background-image-clip-path-general": "",
    "background-image-crop-options-general": null,
    "background-image-height-general": 100,
    "background-image-height-unit-general": "%",
    "background-image-mediaID-general": "",
    "background-image-mediaURL-general": "",
    "background-image-opacity-general": 0.55,
    "background-image-opacity-m": 0.55,
    "background-image-origin-general": "padding-box",
    "background-image-position-general": "left top",
    "background-image-position-height-general": 0,
    "background-image-position-height-unit-general": "%",
    "background-image-position-m": "left top",
    "background-image-position-width-general": 0,
    "background-image-position-width-unit-general": "%",
    "background-image-repeat-general": "repeat",
    "background-image-repeat-m": "repeat",
    "background-image-size-general": "contain",
    "background-image-size-m": "contain",
    "background-image-width-general": 100,
    "background-image-width-unit-general": "%",
    "display-general": "block",
    "id": 1,
    "type": "image",
  },
]
`;
